--- a/HTML/Theme/dark/assets/css/style.css
+++ b/HTML/Theme/dark/assets/css/style.css
@@ -18423,8 +18423,7 @@ body[themebg-pattern="pattern9"] {
   .pcoded .pcoded-navbar[data-navbar-theme="themelight1"] li:hover > a {
     background-color: #e6e6e6 !important; }
 .pcoded .pcoded-header .navbar-logo[data-navbar-theme="theme1"] {
-  background-color: #ffffff;
-  border-right: 1px solid #23282D }
+  background-color: #23282d; }
 .pcoded .pcoded-header .navbar-logo[data-navbar-theme="themelight1"] {
   background-color: #23282D; }
 .pcoded[theme-layout="vertical"][vnavigation-view="view2"][pcoded-device-type="desktop"] .pcoded-navbar, .pcoded[theme-layout="vertical"][vnavigation-view="view2"][pcoded-device-type="tablet"] .pcoded-navbar {
@@ -19248,44 +19247,3 @@ body.menu-bottom .navbar-wrapper {
   overflow: visible !important; }
 
 /*# sourceMappingURL=style.css.map */
-
-/* Custom Start */
-.card .card-header .card-header-right {
-  display: flex;
-}
-
-.card .card-header span {
-  margin-top: 0;
-}
-
-#jobs{
-padding: 1em;
-}
-#jobs-card{
-  padding: 0.1rem;
-}
-#jobs_percent{
-  padding-bottom: 30px !important;
-    padding-top: 20px !important;
-}
-
-#red_bg{
-  background-color:#e74c3c  !important;
-}
-#yellow_bg{
-  background-color:#f1c40f !important;
-}
-#blue_bg{
-  background-color:#0073aa  !important;
-}
-
-#res-config{
-table-layout:fixed;
-width: 99.5% !important;
-}
-
-#head-col {
-  color: #ffffff;
-}
-
-/* Custom End */
