--- a/HTML/Theme/dark/assets/css/style.css
+++ b/HTML/Theme/dark/assets/css/style.css
@@ -18423,7 +18423,8 @@ body[themebg-pattern="pattern9"] {
   .pcoded .pcoded-navbar[data-navbar-theme="themelight1"] li:hover > a {
     background-color: #e6e6e6 !important; }
 .pcoded .pcoded-header .navbar-logo[data-navbar-theme="theme1"] {
-  background-color: #23282d; }
+  background-color: #ffffff;
+  border-right: 1px solid #23282D }
 .pcoded .pcoded-header .navbar-logo[data-navbar-theme="themelight1"] {
   background-color: #23282D; }
 .pcoded[theme-layout="vertical"][vnavigation-view="view2"][pcoded-device-type="desktop"] .pcoded-navbar, .pcoded[theme-layout="vertical"][vnavigation-view="view2"][pcoded-device-type="tablet"] .pcoded-navbar {
@@ -19247,3 +19248,61 @@ body.menu-bottom .navbar-wrapper {
   overflow: visible !important; }
 
 /*# sourceMappingURL=style.css.map */
+
+/* Custom Start */
+.card .card-header .card-header-right {
+  display: flex;
+}
+
+.card .card-header span {
+  margin-top: 0;
+}
+
+#jobs{
+padding: 1em;
+}
+#jobs-card{
+  padding: 0.1rem;
+}
+#jobs_percent{
+  padding-bottom: 30px !important;
+    padding-top: 20px !important;
+}
+
+#red_bg{
+  background-color:#e74c3c  !important;
+}
+#yellow_bg{
+  background-color:#f1c40f !important;
+}
+#blue_bg{
+  background-color:#0073aa  !important;
+}
+
+#res-config{
+table-layout:fixed;
+width: 99.5% !important;
+}
+
+#head-col {
+  color: #ffffff;
+}
+
+#color_green {
+  border-top: 4px solid #54d98c;
+}
+
+#color_yellow {
+  border-top: 4px solid #f4d03f;
+}
+
+#color_red {
+  border-top: 4px solid #ed7669;
+}
+
+.card-comment-icon .btn-danger {
+    background-color: #c34e42;
+    border: 3px solid #ed7669;
+}
+
+/* Custom End */
