--- a/HTML/Theme/dark/assets/css/style.css
+++ b/HTML/Theme/dark/assets/css/style.css
@@ -43,7 +43,9 @@ ul {
   font-size: 14px; }
   * a:focus, * a:hover {
     text-decoration: none; }
-
+#its-height{
+	height:400px;
+}
 p {
   font-size: 14px; }
 
