--- a/HTML/Theme/dark/assets/css/style.css
+++ b/HTML/Theme/dark/assets/css/style.css
@@ -19316,7 +19316,11 @@ width: 99.5% !important;
 
 #msform .form-candidate li {
   width: 25%;
-  font-size: 15px;
+  font-size: 17px;
+}
+
+#msform .form-candidate li.active {
+  text-shadow: 2px 2px #1a1a1a;
 }
 
 #msform .form-candidate li::before {
@@ -19331,6 +19335,40 @@ width: 99.5% !important;
 
 .wizard > .content {
   min-height: 35em;
+}
+
+  .big-font{
+    padding: -1px 0 !important;
+    color: #0073aa;
+    font-size: 20px;
+    background-color: #f0f0f1;
+}
+
+#ex6SliderVal{
+        font-size: 25px;
+    color: #0073aa;
+    padding: 20px 20px;
+}
+.slides{
+    background: #0073aa;
+    width: calc(100% / 6);
+    height: 4px;
+    position: absolute;
+    -webkit-transition: left 0.3s ease-out;
+    transition: left 0.3s ease-out;
+    bottom: 0;
+}
+ .big-font2{
+    padding: -1px 0 !important;
+    color: #0073aa;
+    font-size: 20px;
+    background-color: #f0f0f1;
+     width:200px;
+}
+
+#candidate-apply {
+  background: linear-gradient( rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%),url("../images/job-front.jpg") no-repeat fixed center;
+  background-size: cover;
 }
 
 /* Custom End */
