--- a/HTML/Theme/dark/assets/css/style.css
+++ b/HTML/Theme/dark/assets/css/style.css
@@ -19416,4 +19416,33 @@ width: 99.5% !important;
   padding-top: 60px;
   color: #ffffff;
 }
+
+#banner-user img {
+  height: 300px;
+}
+
+.main-body .page-wrapper .page-header-custom-title h4 {
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.breadcrumb-custom-title a {
+  color: #fff;
+}
+
+.breadcrumb-custom-item + .breadcrumb-custom-item::before {
+    color: #fff;
+}
+
+.breadcrumb-custom-title li:last-child a {
+    color: #fff;
+}
+
+.jFiler-input-dragDrop {
+  border: 2px dashed #e2b13c;
+}
+
+.input-group-addon-added {
+  background-color: #008081;
+}
 /* Custom End */
