--- a/ATS Website/css/style.css
+++ b/ATS Website/css/style.css
@@ -1675,7 +1675,7 @@ background-size: cover;
 #search-heading h2, #search-heading2 h2 {
   color: #ffffff;
   font-weight: 500;
-  font-size: 4em;
+  font-size: 3em;
 }
 
 #search-heading p, #search-heading2 p {
@@ -2633,10 +2633,8 @@ border-radius: 10px;
 }
 
 .nav-tabs {
-
-    border-bottom: 2px solid #dee2e6;
-    border-image: url('../img/border.jpg') 10 5 repeat;
-
+  border-bottom: 2px solid #d11149;
+  border-image: url('../img/border.jpg') 10 5 repeat;
 }
 
 .nav-tabs .nav-link:hover {
@@ -2654,7 +2652,7 @@ border-radius: 10px;
 
 .progress-bar {
   width: 0;
-  background: linear-gradient(left, #33156d 0%, #f282bc 100%);
+  background: linear-gradient(to right, #33156d, #f282bc);
   background: -webkit-linear-gradient(left, #33156d 0%, #f282bc 100%);
 }
 
@@ -2665,6 +2663,7 @@ border-radius: 10px;
 .btn-edit {
   position: absolute;
   right: 0;
+  background-color: transparent;
 }
 
 .edit-form {
@@ -2794,4 +2793,106 @@ div#OR {
 
 #datepicker > span:hover {
   cursor: pointer;
+}
+
+.table td, .table th {
+  border-top: none;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.card-header {
+    background-color: rgb(94, 94, 94);
+    border-bottom: 1px solid rgba(0,0,0,.125);
+    color: #ffffff;
+}
+
+
+#companies #accordion4 .panel{
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    margin: 0 0 10px;
+    overflow: hidden;
+    position: relative;
+}
+#companies #accordion4 .panel-heading{
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 10px;
+    z-index: 1;
+    position: relative;
+}
+#companies #accordion4 .panel-heading:before,
+#companies #accordion4 .panel-heading:after{
+    content: "";
+    width: 50%;
+    height: 20%;
+    box-shadow: 0 15px 5px rgba(0, 0, 0, 0.4);
+    position: absolute;
+    bottom: 15px;
+    left: 10px;
+    transform: rotate(-3deg);
+    z-index: -1;
+}
+#companies #accordion4 .panel-heading:after{
+    left: auto;
+    right: 10px;
+    transform: rotate(3deg);
+}
+#companies h4.panel-title{margin:10px 0px !important;}
+#companies #accordion4 .panel-title a{
+    display: block;
+    padding: 15px 70px 15px 70px;
+    margin: 0;
+    background: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    /*color: #d11149;*/
+    border-radius: 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    position: relative;
+}
+#companies #accordion4 .panel-title a:hover, #companies #accordion4 .panel-title a:active, #companies #accordion4 .panel-title a:focus {
+  color: #FCB300;
+}
+#companies #accordion4 .panel-title a:before,
+#companies #accordion4 .panel-title a.collapsed:before{
+    content: "\f106";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    width: 55px;
+    height: 100%;
+    text-align: center;
+    line-height: 50px;
+    border-left: 2px solid #D11149;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+#companies #accordion4 .panel-title a.collapsed:before{ content: "\f107"; }
+#companies #accordion4 .panel-title a .icon{
+    display: inline-block;
+    width: 55px;
+    height: 100%;
+    border-right: 2px solid #d11149;
+    border-image: url('../img/border.jpg') 10 5 repeat;
+    font-size: 20px;
+    color: rgba(0,0,0,0.7);
+    line-height: 50px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#companies #accordion4 .panel-body{
+    padding: 10px 15px;
+    margin: 0 0 20px;
+    border-bottom: 3px solid #d11149;
+    border-top: none;
+    background: #fff;
+    font-size: 15px;
+    color: #333;
+    line-height: 27px;
 }
